--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,14 @@
 <style>
     body {
         font-family: 'Roboto', sans-serif;
+        background-color: #152f56;
     }
 </style>
 
 <body>
 
     <!-- Header bar -->
-    <div class="mui-appbar" style="font-size: larger;">
+    <div class="mui-appbar" style="font-size: larger; background-color: #284A81;">
         <table width="100%">
             <tr style="vertical-align: middle; color: white;">
 
@@ -28,6 +29,8 @@
                     <button style="visibility: hidden;">
                         <!-- This just fills up space -->
                     </button>Test
+
+                    <!-- Use this color for the searchbox bg: rgb(28, 50, 82)-->
                 </td>
 
                 <!-- Middle (idk yet) -->
