create image grid skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,20 @@
         </table>
     </div>
 
+    <br /><br />
+
+    <!-- Main body -->
+    <div class="mui-container-fluid">
+        <div class="mui-row image-grid">
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+            <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
+        </div>
+    </div>
+
 </body>
 
 </html>
