--- a/src/index.html
+++ b/src/index.html
@@ -25,24 +25,35 @@
             <tr style="vertical-align: middle; color: white;">
 
                 <!-- Left side (site dropdown & searchbox) -->
-                <td class="mui--appbar-height">
-                    <button style="visibility: hidden;">
-                        <!-- This just fills up space -->
-                    </button>Test
+                <td class="mui--appbar-height" align="left" style=" filter: drop-shadow(1px 1px 1px black);">
+                    <div class="mui-caret" style=" margin-left: 10px; margin-right: -3px;">
+                    </div>
+                    <img id="websiteDropdown" src="assets/e621-icon.png" height="40px"
+                        style="vertical-align: middle; margin-right: 5px;">
+
+                    <input type="text" placeholder="Search" style="
+                    vertical-align: middle;
+                    padding: 10px;
+                    transition: all 0.4s ease-in-out;
+                    ">
+                    <style>
+                        input:hover {
+                            box-shadow: 1px 1px #1a67a7, 2px 2px #1a67a7, 3px 3px #1a67a7;
+                            transform: translateY(-2px);
+                        }
+                    </style>
 
                     <!-- Use this color for the searchbox bg: rgb(28, 50, 82)-->
                 </td>
 
                 <!-- Middle (idk yet) -->
                 <td class="mui--appbar-height" align="middle">
-                    Middle
+
                 </td>
 
                 <!-- Right (page nav) -->
                 <td class="mui--appbar-height" align="right">
-                    Right Side
-                    <button style="visibility: hidden;">
-                        <!-- This just fills up space -->
+
                 </td>
             </tr>
         </table>
