make dropdown extra pretty

--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,14 @@
                                 style="vertical-align: middle; margin-right: 5px;">
 
                         </div>
-                        <ul class="mui-dropdown__menu">
-                            <li><a id="selectorE621">e621</a></li>
-                            <li><a id="selectorDerpibooru">Derpibooru</a></li>
+                        <ul class="mui-dropdown__menu" style="margin-top: 20px;">
+                            <li style="margin-top: 10px; margin-bottom: 10px;"><a id="selectorE621"><img
+                                        src="assets/e621-icon.png"
+                                        style="vertical-align: middle; filter: drop-shadow(1px 1px black);"
+                                        height="25px"> <b>e621</b></a></li>
+                            <li style="margin-bottom: 10px"><a id="selectorDerpibooru"><img src="assets/derpi-icon.png"
+                                        style="vertical-align: middle; filter: drop-shadow(1px 1px black);"
+                                        height="25px"> <b>Derpibooru</b></a></li>
                         </ul>
 
                     </div>
