--- a/src/index.html
+++ b/src/index.html
@@ -94,6 +94,8 @@
     <!-- Main body -->
     <div class="mui-container-fluid">
         <div id="imageGrid" class="mui-row image-grid">
+            <!-- TODO: Generate these programmatically based on page size -->
+            <!-- TODO: alternatively, just add masonry again -->
             <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
             <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
             <div class="mui-col-lg-2 mui-col-md-3 mui-col-xs-6">TEST</div>
