is this thing on?

--- a/src/settings.html
+++ b/src/settings.html
@@ -1,52 +1,48 @@
 <html>
-  <head>
-    <title>e669</title>
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- load MUI -->
-    <link
-      href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
-  </head>
-  <style>
-    body {
-      font-family: "Roboto", sans-serif;
-      background-color: #152f56;
-    }
+<head>
+  <title>e669</title>
 
-    .noselect {
-      -webkit-touch-callout: none;
-      /* iOS Safari */
-      -webkit-user-select: none;
-      /* Safari */
-      -khtml-user-select: none;
-      /* Konqueror HTML */
-      -moz-user-select: none;
-      /* Firefox */
-      -ms-user-select: none;
-      /* Internet Explorer/Edge */
-      user-select: none;
-      /* Non-prefixed version, currently
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- load MUI -->
+  <link href="//cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css" />
+  <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
+</head>
+<style>
+  body {
+    font-family: "Roboto", sans-serif;
+    background-color: #152f56;
+  }
+
+  .noselect {
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
-    }
-  </style>
+  }
+</style>
 
-  <body>
-    <div id="header"></div>
+<body>
+  <div id="header"></div>
 
-    <br /><br />
+  <br /><br />
 
-    <!-- Main body -->
-    <div class="mui-container-fluid">
-      <!-- TODO: add settings -->
-    </div>
-  </body>
+  <!-- Main body -->
+  <div class="mui-container-fluid">
+    <!-- TODO: add settings -->
+    testing testing lol
+  </div>
+</body>
+
 </html>
