--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
       width: 18.4%;
     }
 
-    .imgpad {
+    .outline {
       outline-color: rgba(0, 0, 0, 0.2);
       outline-width: 2px;
       outline-style: solid
@@ -89,15 +89,15 @@
     <div class="grid">
       <div class="gutter-sizer"></div>
       <div class="grid-sizer"></div>
-      <img class="imgpad drophover grid-item" src="assets/e621-icon.png">
-      <img class="imgpad drophover grid-item" src="assets/tallboi.png">
-      <img class="imgpad drophover grid-item" src="assets/e621-icon.png">
-      <img class="imgpad drophover grid-item" src="assets/derpi-icon.png">
-      <img class="imgpad drophover grid-item" src="assets/logo.png">
-      <img class="imgpad drophover grid-item" src="assets/logo.png">
-      <img class="imgpad drophover grid-item" src="assets/wideboi.png">
-      <img class="imgpad drophover grid-item" src="assets/logo.png">
-      <img class="imgpad drophover grid-item" src="assets/tallboi.png">
+      <img class="outline drophover grid-item" src="assets/e621-icon.png">
+      <img class="outline drophover grid-item" src="assets/tallboi.png">
+      <img class="outline drophover grid-item" src="assets/e621-icon.png">
+      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
+      <img class="outline drophover grid-item" src="assets/logo.png">
+      <img class="outline drophover grid-item" src="assets/logo.png">
+      <img class="outline drophover grid-item" src="assets/wideboi.png">
+      <img class="outline drophover grid-item" src="assets/logo.png">
+      <img class="outline drophover grid-item" src="assets/tallboi.png">
 
     </div>
   </div>
