add more images for testing

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,8 @@
     <div class="grid">
       <div class="gutter-sizer"></div>
       <div class="grid-sizer"></div>
+
+      <!-- TODO: Generate these programmatically -->
       <img class="outline drophover grid-item" src="assets/e621-icon.png">
       <img class="outline drophover grid-item" src="assets/tallboi.png">
       <img class="outline drophover grid-item" src="assets/e621-icon.png">
@@ -96,8 +98,16 @@
       <img class="outline drophover grid-item" src="assets/logo.png">
       <img class="outline drophover grid-item" src="assets/logo.png">
       <img class="outline drophover grid-item" src="assets/wideboi.png">
+      <img class="outline drophover grid-item" src="assets/tallboi.png">
+      <img class="outline drophover grid-item" src="assets/e621-icon.png">
+      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
+      <img class="outline drophover grid-item" src="assets/battery.png">
       <img class="outline drophover grid-item" src="assets/logo.png">
       <img class="outline drophover grid-item" src="assets/tallboi.png">
+      <img class="outline drophover grid-item" src="assets/wideboi.png">
+      <img class="outline drophover grid-item" src="assets/tallboi.png">
+      <img class="outline drophover grid-item" src="assets/e621-icon.png">
+      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
 
     </div>
   </div>
