--- a/src/header.html
+++ b/src/header.html
@@ -5,18 +5,35 @@
             <!-- site switcher -->
             <td class="mui--appbar-height">
                 <div>
-                    <span class="mui-caret"></span>
-                    <img id="websiteDropdown" src="assets/e621-icon.png" height="80%" class="mui--align-middle"
-                        style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.4));" onclick="console.log('test')">
+                    <div class="mui-dropdown">
+                        <button data-mui-toggle="dropdown"
+                            style="height: 60px; display: flex; align-items: center; background: transparent; border: none; cursor: pointer;">
+                            <img id="websiteDropdown" src="assets/e621-icon.png" height="80%" class="mui--align-middle"
+                                style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.4)); margin-right: 5px;">
+
+                            <span class="mui-caret"></span>
+                        </button>
+
+                        <ul class="mui-dropdown__menu" style="z-index: 99;">
+                            <li id="selectorE621"><a href="#">E621</a></li>
+                            <li id="selectorDerpibooru"><a href="#">Derpibooru</a></li>
+                        </ul>
+                    </div>
                 </div>
             </td>
 
             <td class="mui--appbar-height">
-                testing
+                idk what to put here yet
             </td>
 
             <!-- search -->
-            <td class="mui--appbar-height" align="right">Search Box</td>
+            <td class="mui--appbar-height" align="right" style="padding-top: 0.5%;">
+                <div class="mui-textfield mui-textfield--float-label">
+                    <input type="text" id="searchBox"
+                        style="box-shadow: 2px 2px 8px #0000003f; background-image: linear-gradient(to bottom, rgb(118, 159, 255), rgba(255, 255, 255, 0.597));">
+                    <label style="font-weight: bolder; color: rgba(0, 0, 0, 0.2);">search</label>
+                </div>
+            </td>
         </tr>
     </table>
 </div>
