--- a/src/index.html
+++ b/src/index.html
@@ -20,14 +20,11 @@
       background-color: #152f56;
     }
 
-    img:hover {
+    .drophover:hover {
+      box-shadow: 5px 5px 6px #00000080;
+      z-index: 2;
       transition: all 0.1s ease-in-out;
       transform: scale(1.1);
-    }
-
-    .drophover:hover {
-      box-shadow: 5px 5px 5px #00000080;
-      z-index: 2;
     }
 
     .noselect {
@@ -44,6 +41,11 @@
       user-select: none;
       /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+    }
+
+    .mui-appbar {
+      box-shadow: 0px 5px 20px #0000003a;
+      background-image: linear-gradient(to bottom, rgb(67, 142, 255), rgb(0, 115, 255));
     }
 
     .container {
@@ -69,12 +71,14 @@
     .grid-item {
       float: left;
       width: 18.4%;
+      box-shadow: 2px 2px 4px #0000003f;
     }
 
     .outline {
       outline-color: rgba(0, 0, 0, 0.2);
       outline-width: 2px;
       outline-style: solid;
+      background-color: #00000027;
       z-index: 1;
     }
   </style>
@@ -103,7 +107,7 @@
       <img class="outline drophover grid-item" src="assets/tallboi.png">
       <img class="outline drophover grid-item" src="assets/e621-icon.png">
       <img class="outline drophover grid-item" src="assets/derpi-icon.png">
-      <img class="outline drophover grid-item" src="assets/battery.png">
+      <img class="outline drophover grid-item" src="assets/battery.png" onclick="window.alert('lmao');">
       <img class="outline drophover grid-item" src="assets/logo.png">
       <img class="outline drophover grid-item" src="assets/tallboi.png">
       <img class="outline drophover grid-item" src="assets/wideboi.png">
