--- a/src/header.html
+++ b/src/header.html
@@ -8,22 +8,27 @@
                     <div class="mui-dropdown">
                         <button data-mui-toggle="dropdown"
                             style="height: 60px; display: flex; align-items: center; background: transparent; border: none; cursor: pointer;">
-                            <img id="websiteDropdown" src="assets/e621-icon.png" height="80%" class="mui--align-middle"
-                                style="filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.4)); margin-right: 5px;">
 
-                            <span class="mui-caret"></span>
+                            <span class="mui-caret" style="color: rgba(0, 0, 0, 0.69); margin-right: 5px;"></span>
+                            <img id="websiteDropdown" src="assets/e621-icon.png" height="80%" class="mui--align-middle"
+                                style="filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));">
                         </button>
 
                         <ul class="mui-dropdown__menu" style="z-index: 99;">
-                            <li id="selectorE621"><a href="#">E621</a></li>
-                            <li id="selectorDerpibooru"><a href="#">Derpibooru</a></li>
+                            <li id="selectorE621" style="letter-spacing: 1px;"><a href="#"><b>E621</b></a></li>
+                            <li id="selectorDerpibooru"><a href="#"><b>Derpibooru</b></a>
+                            </li>
+                            <li id="selectorSettings" style="background-color: rgba(0, 0, 0, 0.1);"><a href="#"
+                                    style="color: rgba(0, 0, 0, 0.6)">Settings</a></li>
                         </ul>
                     </div>
                 </div>
             </td>
 
-            <td class="mui--appbar-height">
-                idk what to put here yet
+            <td class="mui--appbar-height"
+                style="text-align: center; font-size: smaller; color: rgba(0, 0, 0, 0.5); filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));">
+                made with 💜 by <b><a style="color: rgba(95, 16, 186, 0.52);"
+                        href="https://deltaryz.com">deltaryz</a></b>
             </td>
 
             <!-- search -->
@@ -31,12 +36,9 @@
                 <div class="mui-textfield mui-textfield--float-label">
                     <input type="text" id="searchBox"
                         style="box-shadow: 2px 2px 8px #0000003f; background-image: linear-gradient(to bottom, rgb(118, 159, 255), rgba(255, 255, 255, 0.597));">
-                    <label style="font-weight: bolder; color: rgba(0, 0, 0, 0.2);">search</label>
+                    <label style="letter-spacing: 4px; font-weight: bolder; color: rgba(0, 0, 0, 0.15);">search</label>
                 </div>
             </td>
         </tr>
     </table>
 </div>
-
-<div id="selectorE621"></div>
-<div id="selectorDerpibooru"></div>
