--- a/src/header.html
+++ b/src/header.html
@@ -9,17 +9,22 @@
                         <button data-mui-toggle="dropdown"
                             style="height: 60px; display: flex; align-items: center; background: transparent; border: none; cursor: pointer;">
 
-                            <span class="mui-caret" style="color: rgba(0, 0, 0, 0.69); margin-right: 5px;"></span>
-                            <img id="websiteDropdown" src="assets/e621-icon.png" height="80%" class="mui--align-middle"
+                            <span class="mui-caret"
+                                style="color: rgba(255, 255, 255, 0.69); margin-right: 5px; filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4))"></span>
+                            <img id="websiteDropdown" src="assets/e621-icon.png" height="80%"
+                                class="mui--align-middle hoverzoom"
                                 style="filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.4));">
                         </button>
 
                         <ul class="mui-dropdown__menu" style="z-index: 99;">
-                            <li id="selectorE621" style="letter-spacing: 1px;"><a href="#"><b>E621</b></a></li>
-                            <li id="selectorDerpibooru"><a href="#"><b>Derpibooru</b></a>
+                            <li id="selectorE621" style="filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));">
+                                <a href="#"><b style="color: rgba(0, 0, 0, 0.55)">e621</b></a>
                             </li>
-                            <li id="selectorSettings" style="background-color: rgba(0, 0, 0, 0.1);"><a href="#"
-                                    style="color: rgba(0, 0, 0, 0.6)">Settings</a></li>
+                            <li id="selectorDerpibooru" style="filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));">
+                                <a href=" #">
+                                    <b style="color: rgba(0, 0, 0, 0.55)">Derpibooru</b></a>
+                            </li>
+                            <li id="selectorSettings"><a href="#" style="color: rgba(0, 0, 0, 0.4)">Settings</a></li>
                         </ul>
                     </div>
                 </div>
@@ -27,15 +32,19 @@
 
             <td class="mui--appbar-height"
                 style="text-align: center; font-size: smaller; color: rgba(0, 0, 0, 0.5); filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));">
-                made with 💜 by <b><a style="color: rgba(95, 16, 186, 0.52);"
-                        href="https://deltaryz.com">deltaryz</a></b>
+                made with 💜 by <b><a style="color: rgba(95, 16, 186, 0.52);" href="https://deltaryz.com"
+                        target="_blank">deltaryz</a></b>
             </td>
 
             <!-- search -->
             <td class="mui--appbar-height" align="right" style="padding-top: 0.5%;">
                 <div class="mui-textfield mui-textfield--float-label">
-                    <input type="text" id="searchBox"
-                        style="box-shadow: 2px 2px 8px #0000003f; background-image: linear-gradient(to bottom, rgb(118, 159, 255), rgba(255, 255, 255, 0.597));">
+                    <input type="text" id="searchBox" style="
+                        box-shadow: 2px 2px 8px #0000003f;
+                        background-image: linear-gradient(to bottom, rgba(112, 155, 255, 0.622), rgba(255, 255, 255, 0.597));
+                        padding-left: 5px;
+                        padding-right: 5px;
+                        ">
                     <label style="letter-spacing: 4px; font-weight: bolder; color: rgba(0, 0, 0, 0.15);">search</label>
                 </div>
             </td>
