Implement e6 image searches and display in grid

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <!-- load MUI -->
   <!-- doing this with npm is... convoluted and confusing. not bothering with it for MUI -->
   <link href="https://cdn.muicss.com/mui-0.10.3/css/mui.min.css" rel="stylesheet" type="text/css">
-  <script src="//cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
+  <script src="https://cdn.muicss.com/mui-0.10.3/js/mui.min.js"></script>
 
 
   <style>
@@ -81,7 +81,7 @@
     }
 
     .outline {
-      outline-color: rgba(0, 0, 0, 0.2);
+      outline-color: rgba(0, 0, 0, 0.3);
       outline-width: 2px;
       outline-style: solid;
       background-color: #00000027;
@@ -113,23 +113,9 @@
       <div class="grid-sizer"></div>
 
       <!-- TODO: Generate these programmatically -->
-      <img class="outline drophover grid-item" src="assets/e621-icon.png">
-      <img class="outline drophover grid-item" src="assets/tallboi.png">
-      <img class="outline drophover grid-item" src="assets/e621-icon.png">
-      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
-      <img class="outline drophover grid-item" src="assets/logo.png">
-      <img class="outline drophover grid-item" src="assets/logo.png">
-      <img class="outline drophover grid-item" src="assets/wideboi.png">
-      <img class="outline drophover grid-item" src="assets/tallboi.png">
-      <img class="outline drophover grid-item" src="assets/e621-icon.png">
-      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
-      <img class="outline drophover grid-item" src="assets/battery.png" onclick="window.alert('lmao');">
-      <img class="outline drophover grid-item" src="assets/logo.png">
-      <img class="outline drophover grid-item" src="assets/tallboi.png">
-      <img class="outline drophover grid-item" src="assets/wideboi.png">
-      <img class="outline drophover grid-item" src="assets/tallboi.png">
-      <img class="outline drophover grid-item" src="assets/e621-icon.png">
-      <img class="outline drophover grid-item" src="assets/derpi-icon.png">
+      <div id="images">
+
+      </div>
 
     </div>
   </div>
