--- a/src/index.html
+++ b/src/index.html
@@ -17,15 +17,33 @@
   <style>
     body {
       font-family: "Roboto Condensed", sans-serif;
-      background-color: #152f56;
+      /* background-color: #152f56; */
+
+      background: linear-gradient(-45deg, #103a87, #482097, #2d3787, #103a87, #152f56);
+      background-size: 400% 400%;
+      animation: gradient 30s ease infinite;
+    }
+
+    @keyframes gradient {
+      0% {
+        background-position: 0% 50%;
+      }
+
+      50% {
+        background-position: 100% 50%;
+      }
+
+      100% {
+        background-position: 0% 50%;
+      }
     }
 
     .drophover:hover {
       box-shadow: 5px 5px 6px #00000080;
       z-index: 2;
-      transition: all 0.1s ease-in-out;
+      transition: all 0.15s ease-in-out;
       transform: scale(1.1);
-      background-color: #0000005d;
+      background-color: #00000051;
     }
 
     .hoverzoom:hover {
@@ -50,12 +68,12 @@
     }
 
     .mui-appbar {
-      box-shadow: 0px 5px 20px #0000003a;
+      box-shadow: 0px 5px 20px #00000054;
       background-image: linear-gradient(to bottom, rgb(67, 142, 255), rgb(0, 115, 255));
     }
 
     .container {
-      width: 95%;
+      width: 93%;
       margin: 0 auto;
     }
 
@@ -95,6 +113,7 @@
 
     xmp {
       white-space: pre-wrap;
+      text-align: center;
     }
   </style>
 
