--- a/src/header.html
+++ b/src/header.html
@@ -1,9 +1,9 @@
 <div class="mui-appbar">
-    <table width="95%" align="center">
+    <table width="97%" align="center">
         <tr style="vertical-align: middle;">
 
             <!-- site switcher -->
-            <td class="mui--appbar-height">
+            <td class="mui--appbar-height" width="20px">
                 <div>
                     <div class="mui-dropdown">
                         <button data-mui-toggle="dropdown"
@@ -30,14 +30,17 @@
                 </div>
             </td>
 
-            <td class="mui--appbar-height"
-                style="text-align: center; font-size: smaller; color: rgba(0, 0, 0, 0.5); filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));">
+            <td class="mui--appbar-height" style="text-align: center;
+                font-size: smaller;
+                letter-spacing: -1px;
+                color: rgba(0, 0, 0, 0.5);
+                filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.3));" width="110px">
                 made with 💜 by <b><a style="color: rgba(95, 16, 186, 0.52);" href="https://deltaryz.com"
                         target="_blank">deltaryz</a></b>
             </td>
 
             <!-- search -->
-            <td class="mui--appbar-height" align="right" style="padding-top: 0.5%;">
+            <td class="mui--appbar-height" align="right" style="padding-top: 8px;">
                 <div class="mui-textfield mui-textfield--float-label">
                     <input type="text" id="searchBox" style="
                         box-shadow: 2px 2px 8px #0000003f;
