navigation buttons on both sides

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,19 @@
         <button name="pagePrevious" class="mui-btn mui-btn--fab mui-btn--small mui-btn--primary">
           ←
         </button>
+
+        <button name="pageNext" class="mui-btn mui-btn--fab mui-btn--small mui-btn--primary">
+          →
+        </button>
       </div>
 
       <div class="center-box" id="pageNumberDisplay"></div>
 
       <div class="right-box">
+        <button name="pagePrevious" class="mui-btn mui-btn--fab mui-btn--small mui-btn--primary">
+          ←
+        </button>
+
         <button name="pageNext" class="mui-btn mui-btn--fab mui-btn--small mui-btn--primary">
           →
         </button>
