implement settings modal

--- a/src/header.html
+++ b/src/header.html
@@ -24,6 +24,7 @@
                                 <a href=" #">
                                     <b style="color: rgba(0, 0, 0, 0.55)">Derpibooru</b></a>
                             </li>
+                            <!-- TODO: gear/wrench icon for settings -->
                             <li id="selectorSettings"><a href="#" style="color: rgba(0, 0, 0, 0.4)">Settings</a></li>
                         </ul>
                     </div>
@@ -53,4 +54,12 @@
             </td>
         </tr>
     </table>
+</div>
+
+<div id="settingsModal" hidden>
+    test<br />
+    test<br />
+    test<br />
+    test<br />
+    test<br />
 </div>
